Fix Event card visibility and wire up LocationEvents page

--- a/client/src/css/Event.css
+++ b/client/src/css/Event.css
@@ -17,26 +17,22 @@
 .event-information-overlay {
     position: absolute;
     bottom: 0;
-    left: 100%;
+    left: 0;
     right: 0;
     background-color: var(--primary);
     overflow: hidden;
-    width: 0;
-    height: 100%;
-    transition: 0.5s ease;
-}
-
-.event-information:hover .event-information-overlay {
     width: 100%;
-    left: 0;
+    height: auto;
+    padding: 16px 0;
 }
 
 .text {
-    position: absolute;
+    position: relative;
     overflow: hidden;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: auto;
+    left: auto;
+    transform: none;
+    text-align: center;
 }
 
 .text i {
